// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapBefore renders 0 1`] = `
Array [
  .c0 {
  wrap-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapBefore renders function 1`] = `
Array [
  .c0 {
  wrap-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: has;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapBefore renders invalid theme path 1`] = `
Array [
  .c0 {
  wrap-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapBefore renders negative number 1`] = `
Array [
  .c0 {
  wrap-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapBefore renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    wrap-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    wrap-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-before: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-before: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapBefore renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    wrap-before: July;
  }
}

@media April {
  .c0 {
    wrap-before: August;
  }
}

@media January {
  .c0 {
    wrap-before: September;
  }
}

@media April {
  .c0 {
    wrap-before: November;
  }
}

@media June {
  .c0 {
    wrap-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    wrap-before: July;
  }
}

@media April {
  .c0 {
    wrap-before: August;
  }
}

@media January {
  .c0 {
    wrap-before: September;
  }
}

@media April {
  .c0 {
    wrap-before: November;
  }
}

@media June {
  .c0 {
    wrap-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-before: January;
  }
}

@media April {
  .c0 {
    wrap-before: December;
  }
}

@media January {
  .c0 {
    wrap-before: April;
  }
}

@media April {
  .c0 {
    wrap-before: May;
  }
}

@media June {
  .c0 {
    wrap-before: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-before: January;
  }
}

@media April {
  .c0 {
    wrap-before: December;
  }
}

@media January {
  .c0 {
    wrap-before: April;
  }
}

@media April {
  .c0 {
    wrap-before: May;
  }
}

@media June {
  .c0 {
    wrap-before: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapBefore renders postitive number 1`] = `
Array [
  .c0 {
  wrap-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapBefore renders string 1`] = `
Array [
  .c0 {
  wrap-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: June;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapBefore renders valid theme path 1`] = `
Array [
  .c0 {
  wrap-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
